aggiunta gestine fine forzatura
